crabbing-interpreters/tests/testsuite/snapshots/testsuite__scope-craftinginterpreters__test__class__empty.lox.snap
---
source: crabbing-interpreters/tests/testsuite/main.rs
info:
  program: crabbing-interpreters
  args:
    - craftinginterpreters/test/class/empty.lox
    - "--scopes"
    - "--stop-at=scopes"
---
success: true
exit_code: 0
----- stdout -----
(program
   (class Foo (global @1) ∅)
   (print (global Foo @1)))

----- stderr -----
