crabbing-interpreters/tests/testsuite/snapshots/testsuite__scope-craftinginterpreters__test__class__inherit_self.lox.snap
---
source: crabbing-interpreters/tests/testsuite/main.rs
info:
  program: crabbing-interpreters
  args:
    - craftinginterpreters/test/class/inherit_self.lox
    - "--scopes"
    - "--stop-at=scopes"
---
success: true
exit_code: 0
----- stdout -----
(program
   (class Foo (global @3) (global-by-name Foo)))

----- stderr -----
